--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -19,7 +19,7 @@
           <a href="#" class="nav__item">Замер</a>
           <a href="#" class="nav__item">Команда</a>
           <a href="#" class="nav__item">Отзывы</a>
-          <a href="#" class="nav__item">Контакты</a>
+          <a href="#" class="nav__item">Контакты</a> 
         </div>
         <div class="contacts menu__contacts">
           <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
@@ -34,20 +34,21 @@
   <!-- Hero Start -->
   <main>
     <section class="hero">
-          <a href="#" class="instagram">Instagrma</a>
-          <div class="hero__content">
-            <div class="container">
-              <h1 class="title hero__title">турецкий ремонт в Ростове-на-дону</h1>
-              <p class="hero__text">
+      <div class="instagram hero__instagram">
+        <a href="#" class="instagram__link">Instagram</a>
+      </div>
+      <div class="hero__content">
+        <div class="container">
+          <h1 class="title hero__title">турецкий ремонт в Ростове-на-дону</h1>
+          <p class="hero__text">
               Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы
-              </p>
-              <button class="button hero__button button--primary">Рассчитать стоимость</button>
-              <button class="button hero__button button--outline">Отправить заявку</button>
-            </div>
-          </div>
+          </p>
+          <button class="button hero__button button--primary">Рассчитать стоимость</button>
+          <button class="button hero__button button--outline">Отправить заявку</button>
+        </div>
+      </div>
           <!-- hero content end -->
-          <a href="#" class="scroll-down">листайте вниз</a>
-
+      <a href="#" class="scroll-down">листайте вниз</a>
     </section> 
       <!-- Hero End -->
   </main>
