--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="hero__content">
         <div class="container">
-          <h1 class="title hero__title">турецкий ремонт в Ростове-на-дону</h1>
+          <h1 class="title hero__title">Турецкий ремонт в Ростове-на-дону</h1>
           <p class="hero__text">
               Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы
           </p>
