--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -52,6 +52,21 @@
       <a href="#" class="hero__scroll-down">листайте вниз</a>
     </section> 
       <!-- Hero End -->
+      <!-- Section control start -->
+      <section class="section control">
+        <div class="container">
+          <div class="section-title">
+            <h2 class="section-title__heading">Онлайн контроль</h2>
+            <!-- /.section-title__headeing -->
+            <div class="section-title__image">
+              <img src="img/video.svg" alt="Video">
+            </div>
+            <!-- /.section-title__image  -->
+          </div>
+          <!-- /.section-title -->
+        </div>
+        <!-- /.container -->
+      </section>
   </main>
   
 </body>
