--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="contacts menu__contacts">
           <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-          <button class="button button--primary">Заказать звонок</button>
+          <button class="button button--primary contacts__button">Заказать звонок</button>
         </div>
       </div>
     </div>
