--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -67,7 +67,242 @@
         </div>
         <!-- /.container -->
       </section>
+      <!-- /.section control-->
+      <section class="section types">
+        <div class="container">
+          <div class="section-title types__section-title">
+            <h2 class="section-title__heading">Виды ремонта</h2>
+            <!-- /.section-title__headeing -->
+            <div class="section-title__image">
+              <img src="img/repair.svg" alt="repair">
+            </div>
+            <!-- /.section-title__image  -->
+          </div>
+          <!-- /.section-title -->
+          <div class="row">
+            <div class="col">
+              <div class="card types__card">
+                <img src="img/type-1.jpg" alt="Косметический ремонт" class="card__image">
+                <div class="card__text">
+                  <h3 class="card__title">Косметический ремонт</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list">
+                    <li class="card__item">Демонтаж старых покрытий</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Поклейка обоев</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Роспись стен и потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Укладка полов</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена сантехники</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена розеток и выключателей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена дверей</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag">
+                    от 900 руб / м<sup>2</sup>
+                  </strong> <!-- /.card__pricetag -->
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+            <div class="col">
+              <div class="card types__card">
+                <img src="img/type-2.jpg" alt="" class="card__image">
+                <div class="card__text">
+                  <h3 class="card__title">Капитальный ремонт</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list">
+                    <li class="card__item">Демонтаж старых покрытий</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Поклейка обоев</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Роспись стен и потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Укладка полов</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена сантехники</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена розеток и выключателей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена дверей</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag">
+                    от 1800 руб / м<sup>2</sup>
+                  </strong>
+                   <!-- /.card__pricetag -->
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+            <div class="col">
+              <div class="card types__card">
+                <img src="img/type-3.jpg" alt="" class="card__image">
+                <div class="card__text">
+                  <h3 class="card__title">Дизайнерский ремонт</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list">
+                    <li class="card__item">Демонтаж старых покрытий</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Поклейка обоев</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Роспись стен и потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Укладка полов</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена сантехники</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена розеток и выключателей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена дверей</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag">
+                    от 4000 руб / м<sup>2</sup>
+                  </strong> <!-- /.card__pricetag -->
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section design-->
+      <section class="section design">
+        <div class="container">
+          <div class="section-title design__section-title">
+            <h2 class="section-title__heading">Дизайн проект</h2>
+            <!-- /.section-title__headeing -->
+            <div class="section-title__image">
+              <img src="img/design.svg" alt="design">
+            </div>
+            <!-- /.section-title__image  -->
+            <p class="section-title__description">
+              Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно
+              удешевляет материалы и сокращает время ремонтных работ
+            </p>
+            <!-- /.section-title__description -->
+          </div>
+          <!-- /.section-title -->
+          <div class="row">
+            <div class="col">
+              <div class="card design__card">
+                <img src="img/design-1.jpg" alt="" class="card__image">
+                <div class="card__text">
+                  <h3 class="card__title">Дизайнерский ремонт</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list">
+                    <li class="card__item">Демонтаж старых покрытий</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Поклейка обоев</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Роспись стен и потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Укладка полов</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена сантехники</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена розеток и выключателей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена дверей</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag">
+                    от 4000 руб / м<sup>2</sup>
+                  </strong> <!-- /.card__pricetag -->
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+            <div class="col">
+              <div class="card design__card">
+                <img src="img/design-2.jpg" alt="" class="card__image">
+                <div class="card__text">
+                  <h3 class="card__title">Дизайнерский ремонт</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list">
+                    <li class="card__item">Демонтаж старых покрытий</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Поклейка обоев</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Роспись стен и потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Укладка полов</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена сантехники</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена розеток и выключателей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена дверей</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag">
+                    от 4000 руб / м<sup>2</sup>
+                  </strong> <!-- /.card__pricetag -->
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+            <div class="col">
+              <div class="card design__card">
+                <img src="img/design-3.jpg" alt="" class="card__image">
+                <div class="card__text">
+                  <h3 class="card__title">Дизайнерский ремонт</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list">
+                    <li class="card__item">Демонтаж старых покрытий</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Поклейка обоев</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Роспись стен и потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Укладка полов</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена сантехники</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена розеток и выключателей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена дверей</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag">
+                    от 4000 руб / м<sup>2</sup>
+                  </strong> <!-- /.card__pricetag -->
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+          </div>
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- /.section__design -->
   </main>
+    
   
 </body>
 </html>
