--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -132,7 +132,6 @@
                     <li class="card__item">Замена розеток и выключателей</li>
                     <!-- /.card__item -->
                     <li class="card__item">Замена дверей</li>
-                    <!-- /.card__item -->
                   </ul>
                   <!-- /.card__list -->
                   <strong class="card__pricetag">
@@ -192,39 +191,34 @@
               <img src="img/design.svg" alt="design">
             </div>
             <!-- /.section-title__image  -->
-            <p class="section-title__description">
+            <p class="section-title__description design__description">
               Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно
               удешевляет материалы и сокращает время ремонтных работ
             </p>
             <!-- /.section-title__description -->
           </div>
           <!-- /.section-title -->
-          <div class="row">
-            <div class="col">
-              <div class="card design__card">
-                <img src="img/design-1.jpg" alt="" class="card__image">
-                <div class="card__text">
-                  <h3 class="card__title">Дизайнерский ремонт</h3>
+          <div class="design__row">
+            <div class="design__col">
+              <div class="design__card">
+                <img src="img/design-1.jpg" alt="" class="design__card-image">
+                <div class="design__card-text">
+                  <h3 class="design__card-title">Минимальный</h3>
                   <!-- /.card__title -->
-                  <ul class="card__list">
-                    <li class="card__item">Демонтаж старых покрытий</li>
+                  <ul class="design__card-list">
+                    <li class="design__card-item">Измерительные чертежи</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Поклейка обоев</li>
+                    <li class="design__card-item">Перепланировка</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Роспись стен и потолков</li>
+                    <li class="design__card-item">Планировка мебели</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Укладка полов</li>
+                    <li class="design__card-item">Сантехнический план</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Замена сантехники</li>
-                    <!-- /.card__item -->
-                    <li class="card__item">Замена розеток и выключателей</li>
-                    <!-- /.card__item -->
-                    <li class="card__item">Замена дверей</li>
                     <!-- /.card__item -->
                   </ul>
                   <!-- /.card__list -->
-                  <strong class="card__pricetag">
-                    от 4000 руб / м<sup>2</sup>
+                  <strong class="design__card-pricetag">
+                    150 руб / м<sup>2</sup>
                   </strong> <!-- /.card__pricetag -->
                 </div>
                 <!-- /.card__text -->
@@ -232,31 +226,31 @@
               <!-- /.card -->
             </div>
             <!-- /.col -->
-            <div class="col">
-              <div class="card design__card">
-                <img src="img/design-2.jpg" alt="" class="card__image">
-                <div class="card__text">
-                  <h3 class="card__title">Дизайнерский ремонт</h3>
+            <div class="design__col">
+              <div class=" design__card">
+                <img src="img/design-2.jpg" alt="" class="design__card-image">
+                <div class="design__card-text">
+                  <h3 class="design__card-title">Стандартный</h3>
                   <!-- /.card__title -->
-                  <ul class="card__list">
-                    <li class="card__item">Демонтаж старых покрытий</li>
+                  <ul class="design__card-list">
+                    <li class="design__card-item">Измерительные чертежи</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Поклейка обоев</li>
+                    <li class="design__card-item">Перепланировка</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Роспись стен и потолков</li>
+                    <li class="design__card-item">Планировка мебели</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Укладка полов</li>
+                    <li class="design__card-item">План потолков</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Замена сантехники</li>
+                    <li class="design__card-item">План этажей</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Замена розеток и выключателей</li>
+                    <li class="design__card-item">План электрики</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Замена дверей</li>
+                    <li class="design__card-item">План света</li>
                     <!-- /.card__item -->
                   </ul>
                   <!-- /.card__list -->
-                  <strong class="card__pricetag">
-                    от 4000 руб / м<sup>2</sup>
+                  <strong class="design__card-pricetag">
+                    400 руб / м<sup>2</sup>
                   </strong> <!-- /.card__pricetag -->
                 </div>
                 <!-- /.card__text -->
@@ -264,31 +258,40 @@
               <!-- /.card -->
             </div>
             <!-- /.col -->
-            <div class="col">
-              <div class="card design__card">
-                <img src="img/design-3.jpg" alt="" class="card__image">
-                <div class="card__text">
-                  <h3 class="card__title">Дизайнерский ремонт</h3>
+            <div class="design__col">
+              <div class="design__card">
+                <img src="img/design-3.jpg" alt="" class="design__card-image">
+                <div class="design__card-text">
+                  <h3 class="design__card-title">Полный</h3>
                   <!-- /.card__title -->
-                  <ul class="card__list">
-                    <li class="card__item">Демонтаж старых покрытий</li>
+                  <ul class="design__card-list">
+                    <li class="design__card-item">Измерительные чертежи</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Поклейка обоев</li>
+                    <li class="design__card-item">Перепланировка</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Роспись стен и потолков</li>
+                    <li class="design__card-item">Планировка мебели</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Укладка полов</li>
+                    <li class="design__card-item">План потолков</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Замена сантехники</li>
+                    <li class="design__card-item">План этажей</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Замена розеток и выключателей</li>
+                    <li class="design__card-item">План электрики</li>
                     <!-- /.card__item -->
-                    <li class="card__item">Замена дверей</li>
+                    <li class="design__card-item">План света <span class="display-yes">...</span></li>
+                    <li class="design__card-item display-none">Стенные развертки</li>
+                    <!-- /.card__item -->
+                    <li class="design__card-item display-none">3D визуализация</li>
+                    <!-- /.card__item -->
+                    <li class="design__card-item display-none">Смета на материалы</li>
+                    <!-- /.card__item -->
+                    <li class="design__card-item display-none">Выезд на подбор материалов</li>
+                    <!-- /.card__item -->
+                    <li class="design__card-item display-none">Выбор мебели</li>
                     <!-- /.card__item -->
                   </ul>
                   <!-- /.card__list -->
-                  <strong class="card__pricetag">
-                    от 4000 руб / м<sup>2</sup>
+                  <strong class="design__card-pricetag">
+                    900 руб / м<sup>2</sup>
                   </strong> <!-- /.card__pricetag -->
                 </div>
                 <!-- /.card__text -->
