--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="contacts menu__contacts">
           <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-          <button class="button button--primary contacts__button">Заказать звонок</button>
+          <button class="button button--primary contacts__button" data-toggle="modal">Заказать звонок</button>
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@
           <p class="hero__text">
               Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы
           </p>
-          <button class="button hero__button button--primary">Рассчитать стоимость</button>
+          <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость</button>
           <button class="button hero__button hero__button--second button--outline">Отправить заявку</button>
         </div>
         <!-- hero content end -->
@@ -323,14 +323,14 @@
             <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
         </div>
         <!-- ./policy -->
-        <button class="button button--primary modal__button">Отправить заявку</button>
+        <button class="button button--primary modal__button" data-toggle="modal">Отправить заявку</button>
       </form>
       <!-- /.form modal__form -->
     </div>
     <!-- /.modal__dialog -->
   </div>
   <!-- /.modal -->
-    
+  <script src="./js/main.js"></script>
   
 </body>
 </html>
