refact: main js

--- a/index.html
+++ b/index.html
@@ -33,19 +33,18 @@
       
       <div id="txt_1">
         <div class="week">
+          <button class="homeworks_btn"><a href="http://www.tranedev.com/gloacademy/webstart/lesson3/" class="homeworks-link">Урок №3: Настройка рабочего проекта</a></button>
           <button class="homeworks_btn"><a href="http://www.tranedev.com/gloacademy/webstart/lesson4/" class="homeworks-link">Урок №4: Основы HTML</a></button>
           <button class="homeworks_btn"><a href="http://www.tranedev.com/gloacademy/webstart/lesson5/" class="homeworks-link">Урок №5: Основы CSS</a></button>
           <button class="homeworks_btn"><a href="http://www.tranedev.com/gloacademy/webstart/lesson6/" class="homeworks-link">Урок №6: Блочная модель CSS </a></button>
-          <div class="homeworks_btn">
-              <button class="homeworks_eh"><a href="http://www.tranedev.com/gloacademy/webstart/lesson7/easy" class="homeworks-link">Урок №7: Flexbox CSS "EASY"</a></button>
-              <button class="homeworks_eh"><a href="http://www.tranedev.com/gloacademy/webstart/lesson7/hard" class="homeworks-link">Урок №7: Flexbox CSS "HARD"</a></button>
-          </div>
+          <button class="homeworks_btn"><a href="http://www.tranedev.com/gloacademy/webstart/lesson7/easy" class="homeworks-link">Урок №7: Flexbox CSS "EASY"</a></button>
+          <button class="homeworks_btn"><a href="http://www.tranedev.com/gloacademy/webstart/lesson7/hard" class="homeworks-link">Урок №7: Flexbox CSS "HARD"</a></button>
         </div>
         <!-- <p>Произвольное содержимое...</p>
         <p>Произвольное содержимое...</p>
         <p>Произвольное содержимое...</p> -->
       </div>
-      <!-- <div id="txt_2">
+      <div id="txt_2">
         <p>Вторая вкладка</p>
       </div>
       <div id="txt_3">
