--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -185,7 +185,7 @@
       <section class="section design">
         <div class="container">
           <div class="section-title design__section-title">
-            <h2 class="section-title__heading">Дизайн проект</h2>
+            <h2 class="section-title__heading design__heading">Дизайн проект</h2>
             <!-- /.section-title__headeing -->
             <div class="section-title__image">
               <img src="img/design.svg" alt="design">
@@ -305,7 +305,7 @@
       </section>
       <!-- /.section__design -->
   </main>
-  <div class="modal">
+  <div class="modal" id="modal_id">
     <div class="modal__dialog">
       <button class="modal__close"></button>
       <!-- /.modal__close -->
@@ -330,7 +330,7 @@
     <!-- /.modal__dialog -->
   </div>
   <!-- /.modal -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="./js/main.js"></script>
-  
 </body>
 </html>
