--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="contacts menu__contacts">
           <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-          <button class="button button--primary contacts__button" data-toggle="modal">Заказать звонок</button>
+          <button class="button button--primary contacts__button button__modal" data-toggle="modal">Заказать звонок</button>
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@
           <p class="hero__text">
               Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы
           </p>
-          <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость</button>
+          <button class="button hero__button hero__button--primary button--primary button__modal" data-toggle="modal">Рассчитать стоимость</button>
           <button class="button hero__button hero__button--second button--outline">Отправить заявку</button>
         </div>
         <!-- hero content end -->
