add & refact: adaptive version, sliders adaptation and refact

--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -56,10 +56,17 @@
       <!-- Projects start -->
       <section class="section section--dark projects">
         <div class="container">
-          <div class="row">
+          <div class="section-title section-title--left projects__title--mobile">
+            <h2 class="section-title__heading section-title__heading--primary projects__title-heading">Завершенные проекты</h2>
+            <!-- /.section-title__headeing -->
+            <p class="section-title__text projects__text">
+                На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей
+            </p>
+          </div>
+          <div class="row projects__row">
             <div class="col-50">
-              <div class="section-title section-title--left">
-                <h2 class="section-title__heading section-title__heading--primary">Завершенные <span class="section-title__word">проекты</span></h2>
+              <div class="section-title section-title--left projects__title--desktop">
+                <h2 class="section-title__heading section-title__heading--primary projects__title-heading">Завершенные <span class="section-title__word projects__word">проекты</span></h2>
                 <!-- /.section-title__headeing -->
                 <p class="section-title__text">
                     На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей
@@ -425,24 +432,18 @@
       </section>
       <!-- /.section__design -->
       <section class="section steps section--dark">
-        <div class="container">
+        <div class="container steps__container--relative">
           <div class="row">
-            <div class="col-40">
-                <span class="steps__span--top">
-                    как мы работаем
-                </span>
-                <div class="section-title section-title--left">
+            <div class="col-39">
+                <span class="steps__span--top">как мы работаем</span>
+                <div class="section-title section-title--left steps__title">
                   <h2 class="section-title__heading section-title__heading--primary steps__heading">6 шагов  <span class="section-title__word steps__word">до цели</span></h2>
                   <!-- /.section-title__headeing -->
                 </div>
-                <!-- <div class="steps__count"><span id="steps-counter"></span>
-    
-                </span>/ 6
-                </div> -->
                 <!-- Swiper -->
                 <!-- Slider main container -->
-                <div class="steps__swiper-container1 swiper-container">
-                    <div class=" steps-slide__pagination1"></div>
+                <div class="steps__swiper-container2 swiper-container">
+                    <div class=" steps-slide__pagination3 steps__counter"></div>
                     <!-- Additional required wrapper -->
                     <div class="swiper-wrapper swiper-no-swiping">
                       <!-- Slides -->
@@ -452,12 +453,12 @@
                         </h3>
                         <p class="steps-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                         </p>
-                        <p class="steps-slide__text"> Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
+                        <p class="steps-slide__text"> Оценщик приходит, чтобы измерить комнату. <br> Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
                         </p>
                       </div>
                       <div class="swiper-slide steps-slide__first">
                         <h3 class="steps-slide__heading">
-                        Выезд на замеры помещения
+                          Составление <br> сметы
                         </h3>
                         <p class="steps-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                         </p>
@@ -466,7 +467,7 @@
                       </div>
                       <div class="swiper-slide steps-slide__first">
                         <h3 class="steps-slide__heading">
-                        Выезд на замеры помещения
+                            Разработка <br> дизайн проекта
                         </h3>
                         <p class="steps-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                         </p>
@@ -475,7 +476,7 @@
                       </div>
                       <div class="swiper-slide steps-slide__first">
                         <h3 class="steps-slide__heading">
-                        Выезд на замеры помещения
+                          Закупка расходных материалов
                         </h3>
                         <p class="steps-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                         </p>
@@ -484,7 +485,7 @@
                       </div>
                       <div class="swiper-slide steps-slide__first">
                         <h3 class="steps-slide__heading">
-                        Выезд на замеры помещения
+                          Ремонтно-отделочные работы
                         </h3>
                         <p class="steps-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                         </p>
@@ -493,7 +494,7 @@
                       </div>
                       <div class="swiper-slide steps-slide__first">
                         <h3 class="steps-slide__heading">
-                        Выезд на замеры помещения
+                          Приемка-сдача <br> работ
                         </h3>
                         <p class="steps-slide__text">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.
                         </p>
@@ -512,41 +513,39 @@
                 </div>
               </div>
               <!-- /.col-40 -->
-              <div class="col-55">
-                <div class="steps-slide__step">
-                  <div class="swiper-container steps__swiper-container2">
-                  <!-- Additional required wrapper -->
-                    <div class="swiper-wrapper steps-swiper__wrapper swiper-no-swiping">
-                      <!-- Slides -->
-                      <div class="swiper-slide steps-slide__about">
-                        <span class="steps-slide__number">01</span>
-                        <p class="steps-slide__description">Выезд на замер помещения</p>
-                      </div>
-                      <div class="swiper-slide steps-slide__about">
-                        <span class="steps-slide__number">02</span>
-                        <p class="steps-slide__description">Составление сметы</p>
-                      </div>
-                      <div class="swiper-slide steps-slide__about">
-                        <span class="steps-slide__number">03</span>
-                        <p class="steps-slide__description">Разработка  дизайн проекта</p>
-                      </div>
-                      <div class="swiper-slide steps-slide__about">
-                        <span class="steps-slide__number">04</span>
-                        <p class="steps-slide__description">Закупка расходных материалов</p>
-                      </div>
-                      <div class="swiper-slide steps-slide__about">
-                        <span class="steps-slide__number">05</span>
-                        <p class="steps-slide__description">Ремонтно-отделочные работы</p>
-                      </div>
-                      <div class="swiper-slide steps-slide__about">
-                        <span class="steps-slide__number">06</span>
-                        <p class="steps-slide__description">Приемка-сдача работ</p>
-                      </div>
-                    </div>
+              <div class="col-63">
+                <div class="steps__step">
+                  <div class="steps__row">
+                    <a class="steps__item active" data-index="0">
+                      <span class="steps__point">01</span>
+                      <p class="steps__description">Выезд на замер помещения</p>
+                    </a>
+                    <a class="steps__item" data-index="1">
+                      <span class="steps__point">02</span>
+                      <p class="steps__description">Составление <br> сметы</p>
+                    </a>
+                    <a class="steps__item steps__item-3" data-index="2">
+                      <span class="steps__point">03</span>
+                      <p class="steps__description">Разработка <br> дизайн проекта</p>
+                    </a>
+                  </div>
+                  <div class="steps__row">
+                    <a class="steps__item" data-index="3">
+                      <span class="steps__point">04</span>
+                      <p class="steps__description">Закупка расходных материалов</p>
+                    </a>
+                    <a class="steps__item" data-index="4">
+                      <span class="steps__point">05</span>
+                      <p class="steps__description">Ремонтно-отделочные работы</p>
+                    </a>
+                    <a class="steps__item steps__item-6" data-index="5">
+                      <span class="steps__point">06</span>
+                      <p class="steps__description">Приемка-сдача <br> работ</p>
+                    </a>
                   </div>
                 </div>
-                <div class="steps-slide__images">
-                  <div class="swiper-container steps__swiper-container3">
+                <div class="steps__gallery">
+                  <div class="swiper-container steps__swiper-container1 steps__swiper-container3">
                   <!-- Additional required wrapper -->
                     <div class="swiper-wrapper steps-swiper__wrapper swiper-no-swiping">
                       <!-- Slides -->
