--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -47,7 +47,7 @@
               Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы
           </p>
           <button class="button hero__button hero__button--primary button--primary button__modal" data-toggle="modal">Рассчитать стоимость</button>
-          <button class="button hero__button hero__button--second button--outline">Отправить заявку</button>
+          <button class="button hero__button hero__button--second button--outline button__modal" data-toggle="modal">Отправить заявку</button>
         </div>
         <!-- hero content end -->
       </div>
@@ -201,13 +201,13 @@
         <form action="" class="form control__form">
           <div class="input-group control__input-group">
             <label for="user-name" class="label control__label form__label label--dark">Имя</label>
-            <input type="text" class="input form__input control__input" id="user-name" placeholder="Как вас зовут">
+            <input type="text" class="input form__input control__input input--dark" id="user-name" placeholder="Как вас зовут">
           </div>
           <div class="input-group control__input-group">
             <label for="user-phone" class="label control__label form__label label--dark">Телефон</label>
-            <input type="tel" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона">
+            <input type="tel" class="input form__input control__input input--dark" id="user-phone" placeholder="Ваш номер телефона">
           </div>
-          <button class="button button--primary control__button" data-toggle="control">Отправить</button>
+          <button class="button button--primary control__button button__modal" data-toggle="modal">Отправить</button>
           <div class="policy control__policy">
               <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
               <label for="policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
@@ -603,6 +603,55 @@
     </section>
     <!-- /.section steps section--dark -->
   </main>
+  <!-- footer start -->
+  <footer class="footer section--dark">
+    <div class="container">
+      <div class="footer__wrap">
+        <h3 class="footer__title">Остались вопросы?</h3>
+        <form action="" class="form footer__form">
+          <div class="input-group footer__input-group">
+            <label for="user-name" class="label form__label label-light">Имя</label>
+            <input type="text" class="input input--light form__input footer__input" id="user-name" placeholder="Как вас зовут">
+          </div>
+          <div class="input-group footer__input-group">
+            <label for="user-phone" class="label form__label label-light">Телефон</label>
+            <input type="tel" class="input input--light form__input footer__input" id="user-phone" placeholder="Ваш номер телефона">
+          </div>
+          <div class="input-group footer__input-group footer__input-group--full-width">
+            <label for="user-question" class="label form__label label-light">Вопрос </label>
+            <input type="text" class="input input--light form__input footer__input" id="user-email" placeholder="Я хочу спросить: ">
+          </div>
+          <div class="policy footer__policy">
+              <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
+              <label for="policy-checkbox" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
+          </div>
+          <!-- ./policy -->
+          <button class="button button--primary footer__button button__modal" data-toggle="modal">Отправить</button>
+        </form>
+        <!-- /.form footer__form -->
+      </div>
+      <!-- /.footer-wrap -->
+    </div>
+    <div class="footer__menu">
+      <div class="container">
+        <div class="menu">
+          <div class="logo menu__logo">Repair Design Project</div>
+          <div class="nav menu__nav">
+            <a href="#" class="nav__item">Главная</a>
+            <a href="#" class="nav__item">Проекты</a>
+            <a href="#" class="nav__item">Замер</a>
+            <a href="#" class="nav__item">Команда</a>
+            <a href="#" class="nav__item">Отзывы</a>
+            <a href="#" class="nav__item">Контакты</a> 
+          </div>
+          <div class="contacts menu__contacts">
+            <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
+            <button class="button button--primary contacts__button button__modal" data-toggle="modal">Заказать звонок</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!-- Scroll-Up -->
   <a href="#" class="button__scroll-up">листайте вверх</a>
   <!-- Modal window -->
@@ -613,18 +662,27 @@
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
       <!-- /.modal__title -->
       <form action="" class="form modal__form">
-        <label for="user-name" class="label form__label label-light">Имя</label>
-        <input type="text" class="input input--light form__input modal__input" id="user-name" placeholder="Как вас зовут">
-        <label for="user-phone" class="label form__label label-light">Телефон</label>
-        <input type="tel" class="input input--light form__input modal__input" id="user-phone" placeholder="Ваш номер телефона">
-        <label for="user-email" class="label form__label label-light">E-mail </label>
-        <input type="email" class="input input--light form__input modal__input" id="user-email" placeholder="Ваш E-Mail">
+        <div class="input-group modal__input-group">
+          <label for="user-name" class="label form__label label-light">Имя</label>
+          <input type="text" name="userName" class="input input--light form__input modal__input" id="user-name" placeholder="Как вас зовут">
+          <div id="summary">
+
+          </div>
+        </div>
+        <div class="input-group modal__input-group">
+          <label for="user-phone" class="label form__label label-light">Телефон</label>
+          <input type="tel" name="userPhone" class="input input--light form__input modal__input" id="user-phone" placeholder="Ваш номер телефона">
+        </div>
+        <div class="input-group modal__input-group">
+            <label for="user-email" class="label form__label label-light">E-mail </label>
+            <input type="email" name="userEmail" class="input input--light form__input modal__input" id="user-email" placeholder="Ваш E-Mail">
+        </div>
         <div class="policy modal__policy">
             <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
             <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
         </div>
         <!-- ./policy -->
-        <button class="button button--primary modal__button" data-toggle="modal">Отправить заявку</button>
+        <button class="button button--primary modal__button" >Отправить заявку</button>
       </form>
       <!-- /.form modal__form -->
     </div>
@@ -637,6 +695,8 @@
   crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="js/wow.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.mask.min.js"></script>
   <script src="./js/main.js"></script>
 
 </body>
