add: section team

--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -207,7 +207,7 @@
             <label for="user-phone" class="label control__label form__label label--dark">Телефон</label>
             <input type="tel" class="input form__input control__input input--dark" id="user-phone" placeholder="Ваш номер телефона">
           </div>
-          <button class="button button--primary control__button button__modal" data-toggle="modal">Отправить</button>
+          <button class="button button--primary control__button button__modal">Отправить</button>
           <div class="policy control__policy">
               <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
               <label for="policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
@@ -603,6 +603,68 @@
       <!-- /.container -->
     </section>
     <!-- /.section steps section--dark -->
+    <!-- section team start -->
+    <section class="section team team__section">
+      <div class="container">
+        <div class="section-title team__section-title section-title--light">
+          <h2 class="section-title__heading team__heading">Наша команда</h2>
+          <!-- /.section-title__headeing -->
+          <div class="section-title__image team__image">
+            <img src="img/team.svg" alt="team">
+          </div>
+          <!-- /.section-title__image  -->
+          <p class="section-title__description team__description">
+              Наша команда помогла стать счастливее более чем <br> 500 семьям, и мы не собираемся останавливаться
+          </p>
+          <!-- /.section-title__description -->
+        </div>
+        <!-- /.section-title -->
+        <div class="row team__row">
+          <div class="card team-card team-card--first">
+            <img src="img/member1.jpg" alt="" class="team-card__image">
+            <div class="team-card__group">
+              <h2 class="team-card__name">Алексей Колмаков</h2>
+              <!-- /.team-card__name -->
+              <span class="team-card__role">Проектный менеджер</span>
+              <!-- /.team-card__role -->
+              <p class="team-card__exp">ОПыт работы 8 лет</p>
+              <!-- /.team-card__exp -->
+            </div>
+          </div>
+          <!-- /.card team-card -->
+          <div class="card team-card team-card--second">
+            <img src="img/member2.jpg" alt="" class="team-card__image">
+            <div class="team-card__group">
+              <h2 class="team-card__name">Алиса Сухорукова</h2>
+              <!-- /.team-card__name -->
+              <span class="team-card__role">Дизайнер</span>
+              <!-- /.team-card__role -->
+              <p class="team-card__exp">Опыт работы 6 лет</p>
+              <!-- /.team-card__exp -->
+            </div>
+          </div>
+          <!-- /.card team-card -->
+          <div class="card team-card team-card--third">
+            <img src="img/member3.jpg" alt="" class="team-card__image">
+            <div class="team-card__group">
+              <h2 class="team-card__name">Давид Волынев</h2>
+              <!-- /.team-card__name -->
+              <span class="team-card__role">Бригадир</span>
+              <!-- /.team-card__role -->
+              <p class="team-card__exp">ОПыт работы 7 лет</p>
+              <!-- /.team-card__exp -->
+            </div>
+          </div>
+          <!-- /.card team-card -->
+        </div>
+        <!-- /.row team__row -->
+        <p class="team__text">
+          Каждый сотрудник нашей компании является квалифицированным штатным специалистом с опытом работы от 6 лет. У нас нет  гастарбайтеров, каждый сотрудник выполняет работу, соответствующую его специальности.
+        </p>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section team team__section -->
     <!-- Section clients start -->
     <section class="section clients">
       <div class="container">
@@ -721,7 +783,7 @@
               <label for="policy-checkbox" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
           </div>
           <!-- ./policy -->
-          <button class="button button--primary footer__button button__modal" data-toggle="modal">Отправить</button>
+          <button class="button button--primary footer__button button__modal">Отправить</button>
         </form>
         <!-- /.form footer__form -->
       </div>
