refact: refact all sections

--- a/practice/src/index.html
+++ b/practice/src/index.html
@@ -415,7 +415,158 @@
       <!-- /.container -->
     </section>
     <!-- /.section advantages-->
-    section.
+    <section class="section fantasy">
+      <div class="container">
+        <div class="row">
+          <div class="col-35">
+            <div class="section-title fantasy__section-title">
+              <h2 class="section-title__heading fantasy__heading">Мы реализуем ваши <br> самые смелые фантазии</h2>
+              <!-- /.section-title__headeing -->
+            </div>
+            <div class="fantasy__item fantasy__item--active" data-index="0">Американская классика</div>
+            <div class="fantasy__item" data-index="1">Имперский стиль</div>
+            <div class="fantasy__item" data-index="2">Классика</div>
+            <div class="fantasy__item" data-index="3">Лофт</div>
+            <div class="fantasy__item" data-index="4">Минимализм</div>
+            <div class="fantasy__item" data-index="5">Прованс</div>
+            <div class="fantasy__item" data-index="6">Романтизм</div>
+            <div class="fantasy__item" data-index="7">Скандинавский стиль</div>
+            <div class="fantasy__item" data-index="8">Средиземноморский стиль</div>
+            <div class="fantasy__item" data-index="9">Хайтек</div>
+            <div class="fantasy__item" data-index="10">Эклектизм</div>
+          </div>
+          <!-- /.col-35 -->
+          <div class="col-60 fantasy__col-slider">
+            <div class="fantasy__gallery">
+              <div class="swiper-container fantasy__swiper-container">
+                <div class="swiper-wrapper swiper-no-swiping">
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50">
+                        <img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image">
+                        <img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image">
+                      </div>
+                      <!-- /.col-50 -->
+                      <div class="col-50">
+                        <img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image">
+                        <img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image">
+                      </div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50"><img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image"><img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                      <div class="col-50"><img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image"><img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50"><img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image"><img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                      <div class="col-50"><img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image"><img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50"><img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image"><img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                      <div class="col-50"><img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image"><img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50"><img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image"><img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                      <div class="col-50"><img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image"><img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50"><img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image"><img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                      <div class="col-50"><img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image"><img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50"><img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image"><img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                      <div class="col-50"><img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image"><img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50"><img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image"><img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                      <div class="col-50"><img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image"><img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50"><img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image"><img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                      <div class="col-50"><img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image"><img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50"><img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image"><img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                      <div class="col-50"><img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image"><img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                  <div class="swiper-slide fantasy-slide">
+                    <div class="row fantasy-slide__row">
+                      <div class="col-50"><img src="img/fantasy-1.jpg" alt="" class="fantasy-slide__image-1 fantasy-slide__image"><img src="img/fantasy-2.jpg" alt="" class="fantasy-slide__image-2 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                      <div class="col-50"><img src="img/fantasy-3.jpg" alt="" class="fantasy-slide__image-3 fantasy-slide__image"><img src="img/fantasy-4.jpg" alt="" class="fantasy-slide__image-4 fantasy-slide__image"></div>
+                      <!-- /.col-50 -->
+                    </div>
+                    <!-- /.row fantasy-slide__row -->
+                  </div>
+                  <!-- /.swiper-slide fantasy-slide -->
+                </div>
+              </div>
+              <!-- /.swiper-container fantasy__swiper-container -->
+            </div>
+          </div>
+          <!-- /.col-60 -->
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.fantasy -->
     <section class="section  design">
       <div class="container">
         <div class="section-title design__section-title">
@@ -432,8 +583,8 @@
           <!-- /.section-title__description -->
         </div>
         <!-- /.section-title -->
-        <div class="design__row row">
-          <div class="design__col col-30" id="des30Left">
+        <div class="row">
+          <div class="col-30" id="des30Left">
             <div class="design__card">
               <img src="img/design-1.jpg" alt="" class="design__card-image">
               <div class="design__card-text">
@@ -460,7 +611,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col-30 -->
-          <div class="design__col col-30" id="des30Center">
+          <div class="col-30" id="des30Center">
             <div class=" design__card">
               <img src="img/design-2.jpg" alt="" class="design__card-image">
               <div class="design__card-text">
@@ -492,7 +643,7 @@
             <!-- /.card -->
           </div>
           <!-- /.col-30 -->
-          <div class="design__col col-30" id="des30Right">
+          <div class="col-30" id="des30Right">
             <div class="design__card">
               <img src="img/design-3.jpg" alt="" class="design__card-image">
               <div class="design__card-text">
